<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dnd.furkhail.bonuscalculator.presentation.view.playerCharacter.PlayerCharacterFragment"
    tools:showIn="@layout/activity_main"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/pc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_lbl"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/abilitiesLbls"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_lbl">

            <TextView
                android:text="@string/strenght"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/strengthLbl"
                style="@style/AbilityLabel"
                />

            <TextView
                android:text="@string/dexterity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dexterityLbl"
                style="@style/AbilityLabel"
                />

            <TextView
                android:text="@string/constitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constitutionLbl"
                style="@style/AbilityLabel"
                />

            <TextView
                android:text="@string/intelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intelligenceLbl"
                style="@style/AbilityLabel"
                />

            <TextView
                android:text="@string/wisdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wisdomLbl"
                style="@style/AbilityLabel"
                />

            <TextView
                android:text="@string/charisma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/charismaLbl"
                style="@style/AbilityLabel"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_lbl"
            android:layout_toRightOf="@id/abilitiesLbls"
            >

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/strengthScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dexterityScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constitutionScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intelligenceScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wisdomScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

            <TextView
                android:text="@string/default_ability_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/charismaScoreLbl"
                style="@style/AbilityLabel.AbilityScore"
                />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_input_add"
            android:background="@drawable/ripple"
            />
    </RelativeLayout>
</ScrollView>
